[gd_scene load_steps=5 format=3 uid="uid://teb00pvy8m6a"]

[ext_resource type="Script" path="res://scripts/ui_logic/start_menu.gd" id="1_ad1o6"]
[ext_resource type="FontFile" uid="uid://ni4di2byl52v" path="res://assets/fonts/DUNGRG__.TTF" id="1_y73cj"]
[ext_resource type="AudioStream" uid="uid://cxo6ocf6t6l18" path="res://sounds/Click Sound Pack/Click1B.ogg" id="3_4b4c0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0gwkn"]
bg_color = Color(0.129412, 0.14902, 0.180392, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="Start" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ad1o6")

[node name="Background" type="Panel" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = -3.0
offset_right = 1155.0
offset_bottom = 643.0

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -232.5
offset_top = 108.0
offset_right = 223.5
offset_bottom = 355.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_y73cj")
theme_override_font_sizes/font_size = 100
text = "Department of Dungeon Design"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.5
offset_top = 66.0
offset_right = 108.5
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 9

[node name="ClickPlayer" type="AudioStreamPlayer" parent="VBoxContainer"]
stream = ExtResource("3_4b4c0")

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_y73cj")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_0gwkn")
text = "PLAY"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_y73cj")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_0gwkn")
text = "OPTIONS"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
